--- a/dash.html
+++ b/dash.html
@@ -839,5 +839,12 @@
         </div>
       </footer>
     </div>
+    <button
+      onclick="toggleDarkMode()"
+      class="btn btn-secondary"
+      id="darkmode-switch"
+    >
+      <i id="darkModeIcon" class="fas"></i> Lichtschalter
+    </button>
   </body>
 </html>
