--- a/dash.html
+++ b/dash.html
@@ -803,16 +803,28 @@
               </a>
             </div>
             <div class="col-4">
-              <a
-                href="https://intra.stettbeck.de/assets/upload/BF_Stettbeck_Parkordnung_FuRW1.pdf"
-              >
+              <a href="https://intra.stettbeck.de/assets/upload/png2pdf.pdf">
                 <div class="card">
                   <div class="card-body">
                     <div class="card-fa mb-3 text-center d-block">
                       <i class="fa-solid fa-square-parking"></i>
                     </div>
+                    <h5 class="card-title text-center fw-bold">Parkordnung</h5>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-4">
+              <a
+                href="https://intra.stettbeck.de/assets/upload/RD_SB_Beladelisten_06.2023.pdf"
+              >
+                <div class="card">
+                  <div class="card-body">
+                    <div class="card-fa mb-3 text-center d-block">
+                      <i class="fa-solid fa-box"></i>
+                    </div>
                     <h5 class="card-title text-center fw-bold">
-                      Parkordnung FuRW1
+                      Beladelisten RD
                     </h5>
                   </div>
                 </div>
