--- a/dash.html
+++ b/dash.html
@@ -768,27 +768,11 @@
               </a>
             </div>
           </div>
-          <div class="row my-3">
-            <div class="col-4">
-              <a href="/admin/login.php">
-                <div class="card">
-                  <div class="card-body">
-                    <div class="card-fa mb-3 text-center d-block">
-                      <i class="fa-solid fa-right-to-bracket"></i>
-                    </div>
-                    <h5 class="card-title text-center fw-bold">
-                      Verwaltungs-Login
-                    </h5>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
           <h2 class="text-light">Quick Links</h2>
           <div class="row my-3">
             <div class="col-4">
               <a
-                href="https://intra.stettbeck.de/assets/upload/Medikamentenliste_RD_HS.pdf"
+                href="https://intra.stettbeck.de/assets/upload/RD_SB_Kompetenzmatrix_08.2023.pdf"
               >
                 <div class="card">
                   <div class="card-body">
@@ -796,7 +780,7 @@
                       <i class="fa-solid fa-syringe"></i>
                     </div>
                     <h5 class="card-title text-center fw-bold">
-                      Freig. Medikamente RD
+                      Kompetenzmatrix RD
                     </h5>
                   </div>
                 </div>
@@ -830,6 +814,34 @@
                 </div>
               </a>
             </div>
+            <div class="col-4 mt-3">
+              <a href="https://intra.stettbeck.de/schnittstelle/anmeldung">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="card-fa mb-3 text-center d-block">
+                      <i class="fa-solid fa-bed-pulse"></i>
+                    </div>
+                    <h5 class="card-title text-center fw-bold">
+                      Patienten Anmeldung KH
+                    </h5>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-4 mt-3">
+              <a href="https://intra.stettbeck.de/schnittstelle/klinikmonitor">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="card-fa mb-3 text-center d-block">
+                      <i class="fa-sharp fa-solid fa-circle-h"></i>
+                    </div>
+                    <h5 class="card-title text-center fw-bold">
+                      Kapazitätsübersicht KH
+                    </h5>
+                  </div>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
         <!-- ANDERE -->
@@ -837,16 +849,9 @@
       </div>
       <footer>
         <div class="row mx-5 pt-2">
-          <div class="col">
-            Made by Hypax for
+          <div class="col text-light">
+            Made by Hypax >>
             <a href="https://nordnetzwerk.eu/">NordNetzwerk.eu</a>
-          </div>
-          <div class="col text-end">
-            <a href="https://nordnetzwerk.eu/app/imprint/">Impressum</a>
-            <span class="mx-3"></span>
-            <a href="https://nordnetzwerk.eu/app/datenschutzerklaerung/"
-              >Datenschutz</a
-            >
           </div>
         </div>
       </footer>
